refactor GUI, MEG4, Events