@@ -9,11 +9,11 @@ import java.util.List;
 import java.util.Map;
 
 public class EnchantmentChallenge10 extends DungeonPackagerConfigFields {
-    public EnchantmentChallenge10(){
+    public EnchantmentChallenge10() {
         super("enchantment_challenge_10_sanctum",
                 false,
                 "&2[lvl 000-200] &fEnchantment Challenge 10",
-                Arrays.asList("&fAn enchantment challenge dungeon!"),
+                List.of("&fAn enchantment challenge dungeon!"),
                 DiscordLinks.freeMinidungeons,
                 DungeonSizeCategory.SANCTUM,
                 "em_id_enchantment_challenge_10",
